# moonboard

./: README.md  index.html  package.json  pnpm-lock.yaml  svelte.config.js  tsconfig.json
src/: app.html  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: migrated.json
src-tauri/moonsweeper/: Cargo.toml  README.md
src-tauri/moonsweeper/examples/: single-key.rs  torpedo.rs  wipe.rs
src-tauri/moonsweeper/src/: lib.rs  main.rs  model.rs  service.rs  util.rs
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: animation.rs  mod.rs
src/components/: Caret.svelte  Practice.svelte  Text.svelte
src/lib/assets/: quote.json
src/lib/components/: Caret.svelte  Confetti.svelte  Game.svelte  HiddenInput.svelte  Practice.svelte  Quote.svelte
src/lib/services/: keyboard.ts
src/lib/stores/: game.ts  machine.ts  practice.ts  services.ts
src/lib/types/: index.ts
src/routes/: +layout.svelte  +page.svelte  types.ts
src/routes/animation/: +page.svelte
src/routes/game/: +page.svelte
src/routes/practice/: +page.svelte
src/store/: machine.ts  store.ts
src/types/: index.ts
